postcss/testData/inspections/customSelectors/incorrectCustomSelectorName.pcss
@custom-selector <error descr="Custom selector name should start with ':--'">:-hs</error> h1, h2, h3;
@custom-selector <error descr="Custom selector name should start with ':--'">: --hs</error> h1, h2, h3;